--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -1,9 +1,20 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/department_db
-spring.datasource.password=@Palani123
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/department_db
+#spring.datasource.password=@Palani123
+#spring.datasource.username=root
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto = update
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto = update
+
+spring.rabbitmq.port=5672
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 spring.application.name=DEPARTMENT-SERVICE
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.config.import=optional:configserver:http://localhost:8888
+management.endpoints.web.exposure.include=*
+
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+management.tracing.sampling.probability=1.0
