--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,10 +1,38 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/employee_db
-spring.datasource.password=@Palani123
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/employee_db
+#spring.datasource.password=@Palani123
+#spring.datasource.username=root
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto = update
+#
+#server.port=8081
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto = update
+spring.rabbitmq.port=5672
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
-server.port=8081
 spring.application.name=EMPLOYEE-SERVICE
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.config.import=optional:configserver:http://localhost:8888
+
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+# for distributed tracing
+management.tracing.sampling.probability=1.0
+
+# Actuator endpoints for circuit breaker
+management.health.circuitbreakers.enabled =true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+
+# Circuit breaker configuration
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowType=COUNT_BASED
+
+
